--- a/app/src/main/res/menu/btn_navi_menu.xml
+++ b/app/src/main/res/menu/btn_navi_menu.xml
@@ -7,7 +7,7 @@
         android:title="카테고리"/>
 
     <item
-        android:id="@+id/tab_serach"
+        android:id="@+id/tab_search"
         android:enabled="true"
         android:icon="@drawable/search"
         android:title="검색"/>
