--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:padding="16dp"
         android:text="이름"
         android:textSize="16sp"
@@ -39,7 +39,6 @@
         android:id="@+id/tvBirthDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:padding="16dp"
         android:text="생년월일 (YYYY-MM-DD)"
         android:textSize="16sp"
@@ -56,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvBirthDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
+        android:padding="16dp"
         android:layout_marginHorizontal="16dp"
         android:enabled="false" />
 
@@ -66,7 +65,6 @@
         android:id="@+id/tvGender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:padding="16dp"
         android:text="성별"
         android:textSize="16sp"
@@ -80,7 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="1dp"
         app:layout_constraintTop_toBottomOf="@id/tvGender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,26 +125,28 @@
         app:layout_constraintTop_toBottomOf="@id/tvAge" />
 
     <!-- 수정 버튼 -->
+
+    <!-- 저장 버튼 -->
+
     <Button
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="8dp"
         android:text="수정"
-        app:layout_constraintTop_toBottomOf="@id/etAge"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/etAge" />
 
-    <!-- 저장 버튼 -->
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="85dp"
+        android:enabled="false"
         android:text="저장"
-        app:layout_constraintTop_toBottomOf="@id/btnEdit"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:enabled="false" />
+        app:layout_constraintStart_toEndOf="@id/btnEdit"
+        app:layout_constraintTop_toTopOf="@id/btnEdit" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
