--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -53,12 +53,12 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/signID"
+                    android:id="@+id/signEmail"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:hint="아이디"
-                    android:inputType="textCapWords"
+                    android:layout_marginBottom="20dp"
+                    android:hint=" 이메일"
+                    android:inputType="textPersonName"
                     android:padding="10dp"
                     android:textColor="@color/black"
                     android:textColorHint="#D3D3D3"/>
@@ -111,7 +111,7 @@
                     android:textColorHint="#D3D3D3"/>
 
                 <RadioGroup
-                    android:id="@+id/radio_gruop"
+                    android:id="@+id/radio_group"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -132,53 +132,12 @@
                 </RadioGroup>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/signBirth"
-                        android:layout_width="100dp"
-                        android:layout_height="40dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginRight="10dp"
-                        android:ems="10"
-                        android:hint=" 년(4자)"
-                        android:inputType="textPersonName"
-                        android:text="" />
-                    <EditText
-                        android:id="@+id/signBirth2"
-                        android:layout_width="100dp"
-                        android:layout_height="40dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginRight="10dp"
-                        android:ems="10"
-                        android:hint=" 월"
-                        android:inputType="textPersonName"
-                        android:text="" />
-                    <EditText
-                        android:id="@+id/signBirth3"
-                        android:layout_width="100dp"
-                        android:layout_height="40dp"
-                        android:layout_marginBottom="20dp"
-                        android:ems="10"
-                        android:hint=" 일"
-                        android:inputType="textPersonName"
-                        android:text="" />
-                </LinearLayout>
-
-
-
                 <EditText
-                    android:id="@+id/signEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="20dp"
-                    android:ems="10"
-                    android:hint=" 이메일"
-                    android:inputType="textPersonName"
-                    android:text="" />
+                    android:id="@+id/signbirthdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="생년월일 (YYYY-MM-DD)"
+                    android:inputType="date" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/signupbutton"
