--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -70,13 +70,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etName" />
 
-    <!-- 아이디 -->
+    <!-- 이메일 -->
     <TextView
         android:id="@+id/tvId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="아이디"
+        android:text="이메일"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etBirthDate" />
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:enabled="false"
-        android:hint="아이디 입력"
+        android:hint="이메일"
         android:padding="8dp"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,14 +145,14 @@
             android:id="@+id/rbMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="남"
+            android:text="남자"
             android:enabled="false" />
 
         <RadioButton
             android:id="@+id/rbFemale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="여"
+            android:text="여자"
             android:enabled="false" />
     </RadioGroup>
 
