패스워드 삭제함

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -94,30 +94,6 @@
         app:layout_constraintStart_toEndOf="@id/tvId"
         app:layout_constraintTop_toBottomOf="@id/etBirthDate" />
 
-    <!-- 비밀번호 -->
-    <TextView
-        android:id="@+id/tvPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="비밀번호"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etId" />
-
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:hint="비밀번호 입력"
-        android:inputType="textPassword"
-        android:padding="8dp"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tvPassword"
-        app:layout_constraintTop_toBottomOf="@id/etId" />
-
     <!-- 성별 -->
     <TextView
         android:id="@+id/tvGender"
@@ -128,7 +104,7 @@
         android:text="성별"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etPassword" />
+        app:layout_constraintTop_toBottomOf="@id/etId" />
 
     <RadioGroup
         android:id="@+id/rgGender"
@@ -139,7 +115,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@id/tvGender"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etPassword">
+        app:layout_constraintTop_toBottomOf="@id/etId">
 
         <RadioButton
             android:id="@+id/rbMale"
