--- a/app/src/main/res/layout/item_supplement.xml
+++ b/app/src/main/res/layout/item_supplement.xml
@@ -1,31 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/layout/item_supplement.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp"
-    android:gravity="center_vertical"
-    tools:ignore="ExtraText">
+    android:padding="8dp">
 
-    <!-- Supplement Name Text -->
+    <!-- Supplement Name -->
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/supplementNameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Supplement Name"
         android:textSize="16sp"
-        android:textColor="@android:color/black"
+        android:textColor="#000000"
         android:paddingEnd="8dp" />
 
-    <!-- Favorite Button -->
-    <ImageButton
-        android:id="@+id/favoriteButton"
+    <!-- Favorite Toggle Button -->
+    <ToggleButton
+        android:id="@+id/favoriteToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/favorite_button"
-        android:padding="8dp" />
+        android:textOff="Add to Favorites"
+        android:textOn="Remove from Favorites"
+        android:checked="false" />
 </LinearLayout>
