--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -18,6 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="일정 추가"
+        android:backgroundTint="@color/button_color"
+        android:textColor="@color/button_text"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/calendarView"
         app:layout_constraintEnd_toEndOf="parent"
