--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorEdit">#2196F3</color> <!-- 파란색 (수정 버튼) -->
-    <color name="colorSave">#F44336</color> <!-- 빨간색 (저장 버튼) -->
-    <color name="colorLogout">#4CAF50</color> <!-- 초록색 (로그아웃 버튼) -->
+    <color name="colorEdit">#c6e1ff</color> <!-- 파란색 (수정 버튼) -->
+    <color name="colorSave">#fdbab8</color> <!-- 빨간색 (저장 버튼) -->
+    <color name="bottom_nav_bar_color">#c8e6c8</color>
+    <color name="button_color">#c2d9ce</color>
+    <color name="button_text">#3d4a3d</color>
 </resources>
