--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.NutriWish" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Nutriwish" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">#c8e6c8</item>
     </style>
 
-    <style name="Theme.NutriWish" parent="Base.Theme.NutriWish" />
+    <style name="Theme.Nutriwish" parent="Base.Theme.Nutriwish" />
 </resources>
