--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/bottom_nav_bar_color"
+        app:itemTextColor="@color/button_text"
+        app:itemIconTint="@color/button_text"
         app:menu="@menu/btn_navi_menu"
         app:labelVisibilityMode="labeled" />
 
