--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,10 +22,15 @@
 
             <TextView
                 android:id="@+id/back"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:background="@color/button_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.7"
-                android:text="back"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="40dp"
+                android:layout_weight="0.5"
+                android:text="뒤로가기"
                 android:textColor="@color/black"
                 android:textSize="20dp" />
 
@@ -92,9 +97,11 @@
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/pwcheckbutton"
                         android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_height="30dp"
                         android:layout_marginLeft="10dp"
                         android:text="확인"
+                        android:background="@color/button_color"
+                        android:textColor="@color/button_text"
                         android:textSize="16sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -142,10 +149,12 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/signupbutton"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="35dp"
                     android:layout_marginTop="20dp"
                     android:layout_gravity="center"
                     android:text="회원가입"
+                    android:background="@color/button_color"
+                    android:textColor="@color/button_text"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
