--- a/app/src/main/res/layout/dialog_add_task_calendar.xml
+++ b/app/src/main/res/layout/dialog_add_task_calendar.xml
@@ -31,6 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="시간 설정"
+        android:backgroundTint="@color/button_color"
+        android:textColor="@color/button_text"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/task_name_input"
         app:layout_constraintStart_toStartOf="parent" />
