--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -140,6 +140,7 @@
         android:layout_marginTop="32dp"
         android:text="수정"
         android:backgroundTint="@color/colorEdit"
+        android:textColor="@color/button_text"
         app:layout_constraintTop_toBottomOf="@id/rgGender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -152,6 +153,7 @@
         android:layout_marginTop="16dp"
         android:text="저장"
         android:backgroundTint="@color/colorSave"
+        android:textColor="@color/button_text"
         android:enabled="false"
         app:layout_constraintTop_toBottomOf="@id/btnEdit"
         app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +166,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="로그아웃"
-        android:backgroundTint="@color/colorLogout"
+        android:backgroundTint="@color/button_color"
+        android:textColor="@color/button_text"
         app:layout_constraintTop_toBottomOf="@id/btnSave"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
