--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
             android:background="#FFFFFF"
             android:hint="이메일"
             android:inputType="textCapWords"
+            android:fontFamily="@font/kcchanbit"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textColorHint="#D3D3D3" />
@@ -44,6 +45,7 @@
             android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:hint="비밀번호"
+            android:fontFamily="@font/kcchanbit"
             android:inputType="textPassword"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -55,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/button_color"
+            android:fontFamily="@font/gamtan"
             android:text="로그인" />
 
         <android.widget.Button
@@ -63,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="#c2d9ce"
+            android:fontFamily="@font/gamtan"
             android:text="회원가입" />
 
 
