--- a/app/src/main/res/layout/fragment_category_detail.xml
+++ b/app/src/main/res/layout/fragment_category_detail.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/button_color"
         android:textColor="@color/button_text"
+        android:fontFamily="@font/gamtan"
         android:text="뒤로가기" />
 
     <LinearLayout
