--- a/app/src/main/res/layout/dialog_add_task_calendar.xml
+++ b/app/src/main/res/layout/dialog_add_task_calendar.xml
@@ -11,7 +11,10 @@
         android:id="@+id/task_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="영양제 이름"
+        android:text="영양제"
+        android:paddingTop="16dp"
+        android:textSize="20dp"
+        android:fontFamily="@font/gamtan"
         tools:ignore="MissingConstraints" />
 
     <!-- 영양제 이름 입력 필드 -->
@@ -20,6 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="이름 입력"
+        android:fontFamily="@font/kcchanbit"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@id/task_name_label"
         app:layout_constraintTop_toTopOf="@id/task_name_label"
@@ -31,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="시간 설정"
+        android:fontFamily="@font/gamtan"
         android:backgroundTint="@color/button_color"
         android:textColor="@color/button_text"
         android:layout_marginTop="24dp"
@@ -42,7 +47,10 @@
         android:id="@+id/task_time_display"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="선택된 시간이 여기에 표시됩니다."
+        android:text="선택된 시간"
+        android:paddingTop="10dp"
+        android:textSize="19dp"
+        android:fontFamily="@font/kcchanbit"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@id/set_time_button"
         app:layout_constraintTop_toTopOf="@id/set_time_button"
@@ -53,6 +61,8 @@
         android:id="@+id/task_memo_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/gamtan"
+        android:textSize="20dp"
         android:text="메모"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/set_time_button"
@@ -60,10 +70,12 @@
 
     <!-- 메모 입력 필드 -->
     <EditText
+        android:paddingTop="35dp"
         android:id="@+id/task_memo_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="메모 입력"
+        android:fontFamily="@font/kcchanbit"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@id/task_memo_label"
         app:layout_constraintTop_toBottomOf="@id/task_time_display"
