--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,6 +9,7 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/calendar_back"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="일정 추가"
+        android:fontFamily="@font/gamtan"
         android:backgroundTint="@color/button_color"
         android:textColor="@color/button_text"
         android:visibility="gone"
