--- a/app/src/main/res/layout/task_item_calendar.xml
+++ b/app/src/main/res/layout/task_item_calendar.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="영양제 이름"
+        android:fontFamily="@font/kcchanbit"
         android:textSize="18sp"
         tools:ignore="MissingConstraints" />
 
